[package]
name = "assignment-2-solution"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <wc385540@students.mimuw.edu.pl>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = {version = "1.22", features = ["full"] }
bytes = "1.2"
bincode = "1.3"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
log = "0.4"
async-channel = "1.7"
base64 = "0.13"

[lib]
name = "assignment_2_solution"
path = "src/lib.rs"

# You can uncomment the following lines if you want your release build to be more optimized
# (but it shouldn't be necessary).
# [profile.release]
# lto = true
# codegen-units = 1
